@@ -12,7 +12,7 @@ Graphical output and mode shape animation via gnuplot.">
 <META NAME="Keywords" CONTENT="Frame3DD, Structural Dynamics, Structural Analysis, Frame Analysis, 3D Frames, 3D Trusses, Structural Analysis Software, Geometric Stiffness, Geometric Stiffness Matrix, Modal Analysis, Modal Analysis Software, Structural Dynamics, Structural Dynamics Software, LDL Decomposition, LDL Decomposition, LU Decomposition, Subspace Iteration, gnuplot, matlab, octave, Henri Gavin, Duke">
 
 <style>
-h1 {font: bold xx-large sans-serif}
+h1 {font: bold x-large sans-serif}
 h2 {font: bold x-large sans-serif}
 h3 {font: bold large sans-serif}
 h4 {font: bold small sans-serif}
@@ -26,9 +26,10 @@ iframe {background-color: #000000; margin-top: 5px; margin-bottom: 5px, border:0
 <body>
 
 <img src="img/psoe.jpg" height="100" align="left" border="0">
-<font face="Arial, Helvetica, sans-serif" size="3">
+<font face="Arial, Helvetica, sans-serif" size="4">
 <nobr><b>User manual and reference for <a href="http://frame3dd.sourceforge.net/">Frame3DD: A Structural Frame Analysis Program</a></b>
-</nobr><br>
+</nobr><br></font>
+<font face="Arial, Helvetica, sans-serif" size="3">
 <a href="http://cee.duke.edu/">
 Department of Civil and Environmental Engineering</a><br>
 <a href="http://pratt.duke.edu/">
@@ -36,17 +37,16 @@ Edmund T. Pratt School of Engineering</a><br>
 <a href="http://www.duke.edu/">
 Duke University</a> - Box 90287,
 <a href="http://www.durham-nc.com/"> Durham</a>,
-<a href="http://www.visitnc.com/"> NC</a> 27708-0287
+<a href="http://www.visitnc.com/"> NC</a> 27708-0287 </nobr></br>
 </font>
-
-<p><i>
+<i>
 <font face="Verdana, Arial, Helvetica, sans-serif" size="2">
-Henri P. Gavin, Ph.D., P.E., </font></i></p>
+Henri P. Gavin, Ph.D., P.E.</font></i>
 
 <hr>
-<h1>Frame3DD</h1>
+<h1>Frame3DD
 
-<h2>version 0.20140514+ </h2>
+version 0.20140514+ </h1>
 
 <!-- iframe src="version.html" width="250" height="30" style="border:solid 1pt grey"></iframe -->
 
